playing with javascript putting droplets on home page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,64 @@
  *= require_tree .
  *= require_self
  */
+
+/*html {*/
+/*background: url(https://c1.staticflickr.com/5/4144/5204220929_191536549d_z.jpg) no-repeat center center fixed;*/
+/*-webkit-background-size: cover;*/
+/*-moz-background-size: cover;*/
+/*-o-background-size: cover;*/
+/*background-size: cover;*/
+/*}*/
+
+/*.drops li{*/
+/*color: white;*/
+/*position: absolute;*/
+/*z-index: 100000;*/
+/*display: block;*/
+/*height: 25px;*/
+/*width:25px;*/
+/*margin: 20px auto;*/
+/*border-radius: 50%;*/
+/*background: rgba(255,255,255,.03) -webkit-radial-gradient(center 75%, ellipse contain, #ffffff, rgba(255,255,255,0) 60%);*/
+/*box-shadow: inset 0 0px 6px rgba(0,0,0,.5), inset 0 -1px 6px rgba(0,0,0,.4),  inset 0 8px 3px rgba(0,0,0,.3), inset 0 10px 3px rgba(255,255,255,.1), 0 3px 6px rgba(0,0,0,.5);*/
+/*}*/
+
+body {
+    background: #666;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+.bg {
+    /*background: #000 url(https://c1.staticflickr.com/5/4144/5204220929_191536549d_z.jpg);*/
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.drops ul {
+    position: relative;
+    z-index: 1000;
+}
+
+.drops li {
+    position: relative;
+    z-index: 100000;
+    display: block;
+    height: 25px;
+    background: rgba(255, 255, 255, .03) -webkit-radial-gradient(center 75%, ellipse contain, #ffffff, rgba(255, 255, 255, 0) 60%);
+    /*margin: 20px auto;*/
+    border-radius: 50%;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .5),
+    inset 0 -1px 6px rgba(0, 0, 0, .6),
+    inset 0 8px 3px rgba(0, 0, 0, .3),
+    inset 0 10px 3px rgba(255, 255, 255, .1),
+    0 3px 6px rgba(0, 0, 0, .5);
+}
